解决了下拉刷新不能触发onPullDownRefresh的BUG

--- a/TodayNews/app.json
+++ b/TodayNews/app.json
@@ -9,8 +9,7 @@
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#01D6E0",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black",
-    "enablePullDownRefresh": "true"
+    "navigationBarTextStyle":"black"
   },
 
   "tabBar": {
